Corrected the background of the about card, separated the mobile images more and stretched the mobile contact gif

--- a/w01d03/my-webpage/css/style.css
+++ b/w01d03/my-webpage/css/style.css
@@ -18,6 +18,12 @@ body {
 	margin: 30px;
 	width: 250px;
 }
+.colMargin {
+	margin: 30px 0;
+}
+.contMargin {
+	margin: 40px 0;
+}
 #pad {
 	padding: 30px;
 	background-size: contain;
@@ -62,6 +68,10 @@ div.green {
 @media only screen and (max-width: 768px){
 	.disappear-when-small {
 		display: none;
+	}
+	.contact-width{
+		max-width:100%;
+  		max-height:100%;
 	}
 }
 @media only screen and (min-width: 768px){
